infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: thanadilok/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000        # 🔸 ใช้ port 3000 ใน ingress
      targetPort: 4200  # 🔸 แต่ Angular ใช้พอร์ต 4200
